--- a/client/style.css
+++ b/client/style.css
@@ -148,3 +148,18 @@ form img {
   width: 30px;
   height: 30px;
 }
+.seeLinksButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #10a37f;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+}
